@@ -11,6 +11,7 @@ Changes for 3.2.2rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 3.2.1
@@ -196,6 +197,7 @@ Changes for 3.0.6rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 3.0.5
@@ -1692,6 +1694,7 @@ Changes for 2.2.16rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11213] fixed database monitoring keys (wiper)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.15
